--- a/practiceC++/practiceC++.vcxproj.filters
+++ b/practiceC++/practiceC++.vcxproj.filters
@@ -150,9 +150,6 @@
     <ClCompile Include="2504.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="라이브코딩2_1.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="My2Vector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -163,6 +160,27 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="배열의분할.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2751.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10989.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1712_손익분기점.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2869_달팽이는 올라가고 싶다.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1085_직사각형에서 탈출.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3009_네번째점.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="4153_직각삼각형.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
