--- a/practiceC++/practiceC++.vcxproj.filters
+++ b/practiceC++/practiceC++.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="1463_1로 만들기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9095_1,2,3 더하기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyTerm.h">
